[package]
name = "counter_test"
version = "0.1.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
borsh = "1.5.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
shank = "0.4.2"
solana-program = "2.0.0"
spl-discriminator = "0.3.0"
thiserror = "1.0.61"

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "=2.0.2"
solana-program-test = "=2.0.2"
# solana-test-validator = "=2.0.2"
solana-sdk = "=2.0.2"
borsh = "1.5.1"

[lib]
name="counter_test"
crate-type = ["cdylib", "rlib"]
doctest = false
